chore: add support for cross-platform `@TestInstance` annotation in kotlin-test and provide feature to support env var and sysprop overrides in tests